feat: setup app with session-auth and di; add Dockerfile; add src layout

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,13 @@
+HOST=
+PORT=
+RELOAD=
+
 POSTGRES_PORT=
 POSTGRES_HOST=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_DB=
+
+REDIS_HOST=
+REDIS_PORT=
+REDIS_PASSWORD=
