--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,11 @@
+[build-system]
+requires = ["setuptools"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+package-dir = {"" = "src"}
+packages = ["dash"]
+
 [project]
 name = "dash"
 version = "0.1.0"
@@ -9,6 +17,12 @@ dependencies = [
     "sqlalchemy>=2.0.38",
     "alembic>=1.14.1",
     "pydantic-settings>=2.7.1",
+    "fastapi>=0.115.8",
+    "dishka>=1.4.2",
+    "bcrypt>=4.2.1",
+    "uvicorn>=0.34.0",
+    "email-validator>=2.2.0",
+    "redis>=5.2.1",
 ]
 
 [tool.ruff]
