--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ dependencies = [
     "uvicorn>=0.34.0",
     "email-validator>=2.2.0",
     "redis>=5.2.1",
+    "npc-iot",
 ]
 
 [tool.ruff]
@@ -61,3 +62,6 @@ exclude = [
     "dist",
     "logs",
 ]
+
+[tool.uv.sources]
+npc-iot = { git = "https://github.com/naglyadservice/npc-iot.git" }
