refactoring. add monopay, add payment denomination handling

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,11 @@ POSTGRES_DB=
 REDIS_HOST=
 REDIS_PORT=
 REDIS_PASSWORD=
+
+MQTT_HOST=
+MQTT_PORT=
+MQTT_USERNAME=
+MQTT_PASSWORD=
+
+MONOPAY_TOKEN=
+MONOPAY_REDIRECT_URL=
