--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,8 @@ dependencies = [
     "redis>=5.2.1",
     "npc-iot",
     "greenlet>=3.1.1",
+    "ecdsa>=0.19.1",
+    "aiohttp>=3.11.14",
 ]
 
 [tool.ruff]
