--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,11 @@
 HOST=
 PORT=
 RELOAD=
+ALLOWED_ORIGINS=["https://dash.iotapps.net"]
+
+LOG_LEVEL=
+LOG_JSON=
+LOG_COLORIZE=
 
 POSTGRES_PORT=
 POSTGRES_HOST=
