--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,8 @@ dependencies = [
     "greenlet>=3.1.1",
     "ecdsa>=0.19.1",
     "aiohttp>=3.11.14",
+    "structlog>=25.2.0",
+    "orjson>=3.10.15",
 ]
 
 [tool.ruff]
