--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ dependencies = [
     "python-multipart>=0.0.20",
     "python-jose>=3.4.0",
     "httpx>=0.28.1",
+    "adaptix>=3.0.0b11",
 ]
 
 [project.optional-dependencies]
