--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,7 @@ dependencies = [
     "python-jose>=3.4.0",
     "httpx>=0.28.1",
     "adaptix>=3.0.0b11",
+    "uuid-utils>=0.10.0",
 ]
 
 [project.optional-dependencies]
