--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,9 @@ dependencies = [
     "httpx>=0.28.1",
     "adaptix>=3.0.0b11",
     "uuid-utils>=0.10.0",
+    "ddtrace>=3.7.0",
+    "asgi-correlation-id>=4.3.4",
+    "uvloop>=0.21.0",
 ]
 
 [project.optional-dependencies]
