add debugpy to deps

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "ddtrace>=3.7.0",
     "asgi-correlation-id>=4.3.4",
     "uvloop>=0.21.0",
+    "debugpy>=1.8.14",
 ]
 
 [project.optional-dependencies]
