add companies logo with s3 integration, improve config

--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,46 @@
-HOST=
-PORT=
-RELOAD=
-ALLOWED_ORIGINS=["https://dash.iotapps.net"]
+APP__HOST=127.0.0.1
+APP__PORT=8000
+APP__RELOAD=
+APP__ALLOWED_ORIGINS=
+APP__ENABLE_DATADOG=
+APP__ENABLE_DEBUGPY=
+APP__TIMEZONE=
 
-LOG_LEVEL=
-LOG_JSON=
-LOG_COLORIZE=
+LOGGING__LEVEL=
+LOGGING__JSON_MODE=
+LOGGING__COLORIZE=
 
-POSTGRES_PORT=
-POSTGRES_HOST=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
+POSTGRES__PORT=
+POSTGRES__HOST=
+POSTGRES__USER=
+POSTGRES__PASSWORD=
+POSTGRES__DB=
 
-REDIS_HOST=
-REDIS_PORT=
-REDIS_PASSWORD=
+REDIS__HOST=
+REDIS__PORT=
+REDIS__PASSWORD=
 
-MQTT_HOST=
-MQTT_PORT=
-MQTT_USERNAME=
-MQTT_PASSWORD=
+MQTT__HOST=
+MQTT__PORT=
+MQTT__USERNAME=
+MQTT__PASSWORD=
 
-MONOPAY_TOKEN=
-MONOPAY_WEBHOOK_URL=
-MONOPAY_REDIRECT_URL=
+MONOPAY__TOKEN=
+MONOPAY__WEBHOOK_URL=
+MONOPAY__REDIRECT_URL=
+
+LIQPAY__PRIVATE_KEY=
+LIQPAY__PUBLIC_KEY=
+LIQPAY__REDIRECT_URL=
+LIQPAY__WEBHOOK_URL=
+
+JWT__ACCESS_SECRET=
+JWT__ACCESS_ALGORITHM=
+JWT__ACCESS_EXPIRE_MINUTES=
+JWT__REFRESH_SECRET=
+JWT__REFRESH_ALGORITHM=
+JWT__REFRESH_EXPIRE_DAYS=
+
+SMS__API_KEY=
+
+S3__BUCKET_NAME=
