--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,13 +32,13 @@ services:
     networks:
       - dash.postgres.network
     environment:
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_PASSWORD=${POSTGRES__PASSWORD}
+      - POSTGRES_USER=${POSTGRES__USER}
+      - POSTGRES_DB=${POSTGRES__DB}
     volumes:
       - dash.postgres.data:/var/lib/postgresql/data:rw
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -d $$POSTGRES_DB -U $$POSTGRES_USER"]
+      test: ["CMD-SHELL", "pg_isready -d $$POSTGRES__DB -U $$POSTGRES__USER"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -52,9 +52,9 @@ services:
     image: "redis:7.4-alpine"
     ports:
       - "6379:6379"
-    command: redis-server --save 60 1 --loglevel warning --requirepass ${REDIS_PASSWORD}
+    command: redis-server --save 60 1 --loglevel warning --requirepass ${REDIS__PASSWORD}
     healthcheck:
-      test: ["CMD-SHELL", "redis-cli -a ${REDIS_PASSWORD} ping | grep PONG"]
+      test: ["CMD-SHELL", "redis-cli -a ${REDIS__PASSWORD} ping | grep PONG"]
       interval: 1s
       timeout: 3s
       retries: 5
