--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ dependencies = [
     "uvloop>=0.21.0",
     "debugpy>=1.8.14",
     "aioboto3>=15.0.0",
+    "tenacity>=9.1.2",
 ]
 
 [project.optional-dependencies]
