--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,8 @@ env:
 phases:
   pre_build:
     commands:
+      - ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - echo "Мій Account ID: $ACCOUNT_ID"
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
       - |
