--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,16 +8,19 @@ phases:
   pre_build:
     commands:
       - |
+        echo "Determining Account ID..."
         ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
-      - echo "Account ID: $ACCOUNT_ID"
-      - echo Logging in to Amazon ECR...
-      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
-      - |
+        echo "Account ID is: $ACCOUNT_ID"
+        echo "Logging in to Amazon ECR..."
+        aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin $ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com
+        echo "ECR login successful."
+        echo "Setting up image tags..."
         GIT_COMMIT_FULL_HASH=$CODEBUILD_RESOLVED_SOURCE_VERSION
         COMMIT_HASH=$(echo $GIT_COMMIT_FULL_HASH | cut -c 1-7)
         IMAGE_TAG=${COMMIT_HASH:=latest}
         FULL_IMAGE_TAG="${IMAGE_TAG}-${APP_CONTAINER_NAME}"
         IMAGE_URI_WITH_TAG="${ECR_REPO_URI}:${FULL_IMAGE_TAG}"
+        echo "Full image tag will be: $IMAGE_URI_WITH_TAG"
   build:
     commands:
       - echo Build started on `date`
